hphp/test/zend/good/zend/class_alias_015.php
<?php

namespace foo;

class bar {
}

class_alias('foo\bar', 'foo\baz');

var_dump(new namespace\baz);

?>